Make pin to taskmanager a toggleable action

Right now when an app is already pinned to the taskmanager, kickoff
thinks as is not pinnable anymore, adding the icon widget to the
panel is still needed.

This changes the pin to taskmanager to be a toggle action, so
unckecking it, it will be removed.

On the long term i would like to have the same per activity
context menu that the taskbar itself has, but since it would
be a more invasive change, should be at least for 6.1

BUG:480198